--- a/Formulario.html
+++ b/Formulario.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-   
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario Escolar</title>
     <link rel="stylesheet" href="./css/Formulario.css">
 </head>
 <body>
     
     <div class="nav-bar">
-        <a href="index.html">Inicio</a> 
+        <a href="index.html">Inicio</a>
         <a href="Acerca de nosotros.html">Acerca de Nosotros</a>
         <a href="Formulario.html">Formulario</a>
         <a href="blogs.html">Blogs</a>
@@ -18,8 +19,8 @@
         <div class="header__logo-container">
             <img src="images/Logo.png" alt="Logo" class="header__logo" width="67" height="88">
             <div class="header__name">
-                <span class="header__logo-text">U.E.E Doctora<br>Blanca Rosa<br>Urquiaga</span>
-            </div>  
+               <span class="header__logo-text">U.E.E Doctora<br>Blanca Rosa<br>Urquiaga</span> 
+            </div>
         </div>
         <h1>Formulario Escolar</h1>
         <p>Complete los datos del estudiante para el registro.
