--- a/Formulario.html
+++ b/Formulario.html
@@ -26,7 +26,8 @@
         <p>Complete los datos del estudiante para el registro.
     <div class="form-container">
         <h2>Información del Alumno</h2>
-        <form id="schoolForm">
+        <form
+  action="https://formspree.io/f/mjkyldog" method="POST">
             <div class="form-group">
                 <label for="name">Nombre Completo</label>
                 <input type="text" id="name" name="name" placeholder="Escriba el nombre del alumno" maxlength="50" required>
