--- a/Formulario.html
+++ b/Formulario.html
@@ -38,7 +38,7 @@
             </div>
             <div class="form-group">
                 <label for="phone">Número de Teléfono</label>
-                <input type="tel" id="phone" name="phone" placeholder="Ingrese el número de contacto" pattern="[0-9]{10}" maxlength="10" required>
+                <input type="tel" id="phone" name="phone" placeholder="Ingrese el número de contacto" maxlength="15" required>
             </div>
             <div class="form-group">
                 <label for="email">Correo Electrónico</label>
