--- a/Formulario.html
+++ b/Formulario.html
@@ -23,14 +23,14 @@
             </div>
         </div>
         <h1>Formulario Escolar</h1>
-        <p>Complete los datos del estudiante para el registro.
+        <p>Complete los datos del Formulario.
     <div class="form-container">
-        <h2>Información del Alumno</h2>
+        <h2>Información Personal</h2>
         <form
   action="https://formspree.io/f/mjkyldog" method="POST">
             <div class="form-group">
                 <label for="name">Nombre Completo</label>
-                <input type="text" id="name" name="name" placeholder="Escriba el nombre del alumno" maxlength="50" required>
+                <input type="text" id="name" name="name" placeholder="Escriba su nombre completo" maxlength="50" required>
             </div>
             <div class="form-group">
                 <label for="dob">Fecha de Nacimiento</label>
@@ -64,7 +64,7 @@
                 </div>
             </div>
             
-            <button type="submit">Registrar</button>
+            <button type="submit">Enviar Formulario</button>
         </form>
     </div>
     <footer>
