--- a/Formulario.html
+++ b/Formulario.html
@@ -27,7 +27,7 @@
     <div class="form-container">
         <h2>Información Personal</h2>
         <form
-  action="https://formspree.io/f/mjkyldog" method="POST">
+        action="https://formspree.io/f/mnndajey" method="POST">
             <div class="form-group">
                 <label for="name">Nombre Completo</label>
                 <input type="text" id="name" name="name" placeholder="Escriba su nombre completo" maxlength="50" required>
