--- a/Acerca de nosotros.html
+++ b/Acerca de nosotros.html
@@ -56,6 +56,11 @@ En 1959, la U.E.E. Dra. Blanca Rosa Urquiaga fue oficialmente fundada el 22 de n
                 <p></p></div>
             </div>
         </div>
+        <div class="buttons">
+            <button class="button" onclick="moveCarousel(-1)">⮜</button>
+            <button class="button" onclick="moveCarousel(1)">⮞</button>
+        </div>
+    </div>
        <!-- Botón para abrir la galería -->
     <button class="gallery-btn" onclick="openGallery()">Galería</button>
 
